--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "cypress": "^12.4.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongodb": "^4.13.0"
+    "mongodb": "^4.13.0",
+    "react-router-dom": "^6.8.0"
   }
 }
