--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "cypress": "^12.4.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.13.0",
     "mongoose": "^6.9.0",
     "nodemon": "^2.0.20"
