--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",    
+    "build": "react-scripts build",
     "eject": "react-scripts eject",
     "test": "npm run test:unit && npm run test:feature",
     "test:unit": "cypress run --component",
     "test:feature": "cypress run"
-
   },
   "eslintConfig": {
     "extends": [
@@ -40,6 +39,10 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^12.4.1"
+    "babel-jest": "^29.4.1",
+    "cypress": "^12.4.1",
+    "jest": "^27.5.1",
+    "jest-environment-jsdom": "^29.4.1",
+    "regenerator-runtime": "^0.13.11"
   }
 }
