--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "cypress": "^12.4.1",
     "dotenv": "^16.0.3",
@@ -20,7 +21,5 @@
     "nodemon": "^2.0.20",
     "react-router-dom": "^6.8.0"
   },
-  "description": "" 
-  
-  
+  "description": ""
 }
