--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
@@ -44,6 +45,9 @@
     "cypress": "^12.4.1"
   },
   "react-dotenv": {
-    "whitelist": ["REACT_APP_API_KEY", "REACT_APP_USER_AGENT"]
+    "whitelist": [
+      "REACT_APP_API_KEY",
+      "REACT_APP_USER_AGENT"
+    ]
   }
 }
